chore: bump VERSION to 1.8.27 for release
